# swagger.yaml
@@ -106,6 +106,11 @@ paths:
         get:
             description: Consume an image
             operationId: consumeImageHandler
+            parameters:
+                - in: query
+                  name: token
+                  type: string
+                  x-go-name: Token
             tags:
                 - Consume
     /devices:
@@ -140,13 +145,6 @@ paths:
         delete:
             description: Delete a device
             operationId: deleteDeviceHandler
-            parameters:
-                - format: int64
-                  in: path
-                  name: id
-                  required: true
-                  type: integer
-                  x-go-name: ID
             responses:
                 "204":
                     description: ""
@@ -155,13 +153,6 @@ paths:
         get:
             description: Get a device
             operationId: getDeviceHandler
-            parameters:
-                - format: int64
-                  in: path
-                  name: id
-                  required: true
-                  type: integer
-                  x-go-name: ID
             responses:
                 "200":
                     description: GetDeviceResponse
@@ -206,6 +197,16 @@ paths:
         post:
             description: Upload a new image
             operationId: createImageHandler
+            parameters:
+                - format: int64
+                  in: formData
+                  name: deviceId
+                  type: integer
+                  x-go-name: DeviceId
+                - in: formData
+                  name: image
+                  type: file
+                  x-go-name: ImageFile
             responses:
                 "201":
                     description: CreateImageResponse
